Added Email Verifier using gmail smtp + new tests
