# db/sqlc/models.go
@@ -51,4 +51,15 @@ type User struct {
 	Email             string             `json:"email"`
 	PasswordChangedAt pgtype.Timestamptz `json:"password_changed_at"`
 	CreatedAt         pgtype.Timestamptz `json:"created_at"`
+	IsEmailVerified   bool               `json:"is_email_verified"`
+}
+
+type VerifyEmail struct {
+	ID         int64              `json:"id"`
+	Username   string             `json:"username"`
+	Email      string             `json:"email"`
+	SecretCode string             `json:"secret_code"`
+	IsUsed     bool               `json:"is_used"`
+	CreatedAt  pgtype.Timestamptz `json:"created_at"`
+	ExpiresAt  pgtype.Timestamptz `json:"expires_at"`
 }
